# rust-raytracing-tutorial

./: .gitignore  Cargo.toml
src/: camera.rs  lib.rs  main.rs  ray.rs  tracing.rs  utils.rs  vec3.rs
src/materials/: dielectric.rs  lambertian.rs  material.rs  metal.rs  mod.rs
src/objects/: hitable.rs  hitable_vec.rs  mod.rs  sphere.rs
