[package]
name = "rust-raytracing-tutorial"
version = "0.1.0"
authors = ["Lucas Malandrino <lucas.malandrino@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
# bluenoisers = "1.1.1"

[dependencies.image]
features = ["png"]
version = "0.23.0"